# qpropgen

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  RELEASE_CHECK_LIST.md  dev-requirements.txt  qpropgen.py  requirements.txt  setup.cfg  setup.py  tests.sh  tox.ini
.github/workflows/: main.yml
ci/: build  build-docker-image  docker-build
cmake/: qpropgen.cmake
examples/: CMakeLists.txt  basesound.yaml  defaults.yaml  impl.yaml  includes.yaml  mutability.yaml  synth.yaml  usebaseclass.yaml
qpropgen/: __init__.py  classdefinition.py  definitionloader.py  definitionparser.py  errors.py  fromsrc.py  main.py
qpropgen/templates/: template.cpp  template.h
templates/: header.h  impl.cpp  template.cpp  template.h
tests/: test_classdefinition.py  test_definitionloader.py  test_definitionparser.py
