[metadata]
name = qpropgen
version = attr: qpropgen.__version__
description = Generate QML-friendly QObject-based C++ classes from class definition files
long_description = file: README.md
long_description_content_type = text/markdown
author = Aurélien Gâteau
author_email = mail@agateau.com
license = Apache 2.0
platforms = any
url = https://github.com/agateau/qpropgen
keywords = qt, qml, commandline, qobject, generator
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Build Tools

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    PyYAML
    jinja2

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    qpropgen = qpropgen.main:main

[options.package_data]
qpropgen = templates/template.*
